--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include CONTRIBUTORS
 include README.rst
 recursive-include ifgy_login/docs *
 recursive-include ifgy_login/templates *
+recursive-include ifgy_login/locale *
